--- a/server/views/keys/show.xml.haml
+++ b/server/views/keys/show.xml.haml
@@ -6,8 +6,9 @@
     - if driver.respond_to?(:destroy_key)
       %link{ :rel => "destroy", :method => "delete", :href => destroy_key_url(@key.id)}
   - if @key.is_key?
-    %fingerprint<
-      =@key.fingerprint
+    - if @key.fingerprint
+      %fingerprint<
+        =@key.fingerprint
     - unless @key.pem_rsa_key.nil?
       %pem
         ~render_cdata(@key.pem_rsa_key)
