CIMI Webapp create address

--- a/clients/cimi/views/machines/index.haml
+++ b/clients/cimi/views/machines/index.haml
@@ -15,7 +15,7 @@
 
   %div{ :id => :machineModal, :class => 'modal hide fade' }
     .modal-header
-      %h3 Create mew Machine entity
+      %h3 Create new Machine entity
     .modal-body
       %form{ :action => "/cimi/machines", :method => :post }
         %fieldset
