Network API rev 2 (RFC) - Views
Signed-off-by: marios <marios@redhat.com>
TrackedAt: http://tracker.deltacloud.org/patch/58892c140dcc50ece64969d9b4d4f083dba84642

--- a/server/views/instances/new.html.haml
+++ b/server/views/instances/new.html.haml
@@ -84,6 +84,15 @@
               %input{ :type => :text, :id => "path#{i}", :name => "path#{i}", :value => ""} Path #{i}
               %input{ :type => "file", :name => "content#{i}", :size => 50 }
 
+        - if driver.has_capability? :networks
+          %div{ 'data-role' => :fieldcontain }
+            %label{ :for => :network, :class => 'ui-input-text'} Network to Launch Instance into:
+            %select{:name => 'network_id', :'data-native-menu' => "true" }
+              %option{ :value => ''} None
+              - @networks.each do |net|
+                - net.subnets.each do |sn|
+                  %option{ :value => "#{net.id}+#{sn}" } #{net.id}+#{sn}
+
     - if !hardware_profiles.empty?
       %div{ 'data-role' => :fieldcontain }
         %h3 Instance profile
