--- a/server/views/buckets/index.xml.haml
+++ b/server/views/buckets/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %buckets
-  - @elements.each do |c|
-    = haml :'buckets/show', :locals => { :@bucket => c, :partial => true }
+  - elements.each do |c|
+    = haml :'buckets/show', :locals => { :bucket => c, :partial => true }
