--- a/server/views/errors/backend_capability_failure.xml.haml
+++ b/server/views/errors/backend_capability_failure.xml.haml
@@ -1,5 +1,5 @@
-%error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
-  %capability #{@error.capability}
-  %message< #{cdata @error.message}
+%err{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
+  %capability #{err.capability}
+  %message< #{cdata err.message}
 
 
