--- a/server/views/instance_states/show.xml.haml
+++ b/server/views/instance_states/show.xml.haml
@@ -1,5 +1,5 @@
 %states
-  - for state in @machine.states
+  - for state in machine.states
     %state{ :name=>state }
       - for transition in state.transitions
         - if ( transition.automatically? )
