--- a/server/views/instances/run.html.haml
+++ b/server/views/instances/run.html.haml
@@ -2,8 +2,8 @@
 
 %p
   %label Command:
-  %em #{@output.ssh.command}
+  %em #{output.ssh.command}
 %p
   %strong Command output
 %pre
-  =@output.body
+  =output.body
