--- a/server/views/addresses/index.xml.haml
+++ b/server/views/addresses/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %addresses
-  - @elements.each do |c|
-    = haml :'addresses/show', :locals => { :@address => c, :partial => true }
+  - elements.each do |c|
+    = haml :'addresses/show', :locals => { :address => c, :partial => true }
