--- a/server/views/api/show.xml.haml
+++ b/server/views/api/show.xml.haml
@@ -1,5 +1,5 @@
 %api{ :version => settings.version, :driver => driver_symbol, :provider => Thread.current[:provider] || ENV['API_PROVIDER'] }
-  - @collections.each do |c|
+  - collections.each do |c|
     %link{ :rel => c.collection_name, :href => self.send(:"#{c.collection_name}_url")}
       - c.features.select { |f| driver.class.has_feature?(c.collection_name, f.name) }.each do |f|
         - f.operations.each do |operation|
