--- a/server/views/blobs/show.xml.haml
+++ b/server/views/blobs/show.xml.haml
@@ -1,13 +1,13 @@
 !!! XML
-%blob{:href => bucket_url(@blob.bucket) + '/' + @blob.id, :id => @blob.id}
-  %bucket=@blob.bucket
-  - @blob.attributes.select{ |attr| (attr!=:id && attr!=:user_metadata) }.each do |attribute|
+%blob{:href => bucket_url(blob.bucket) + '/' + blob.id, :id => blob.id}
+  %bucket=blob.bucket
+  - blob.attributes.select{ |attr| (attr!=:id && attr!=:user_metadata) }.each do |attribute|
     - next if attribute == :bucket
     - unless attribute == :content
       - haml_tag(attribute, :<) do
-        - haml_concat @blob.send(attribute)
+        - haml_concat blob.send(attribute)
   %user_metadata
-    - if @blob.user_metadata.respond_to? :each
-      - @blob.user_metadata.each do |k, v|
+    - if blob.user_metadata.respond_to? :each
+      - blob.user_metadata.each do |k, v|
         %entry{:key => k}=render_cdata(v)
-  %content{:href => bucket_url(@blob.bucket) + '/' + @blob.id + '/content', :rel => 'blob_content'}
+  %content{:href => bucket_url(blob.bucket) + '/' + blob.id + '/content', :rel => 'blob_content'}
