--- a/server/views/firewalls/show.xml.haml
+++ b/server/views/firewalls/show.xml.haml
@@ -1,20 +1,20 @@
 !!! XML
-%firewall{:href => firewall_url(@firewall.id), :id => @firewall.id}
+%firewall{:href => firewall_url(firewall.id), :id => firewall.id}
   %actions
-    %link{ :rel => :destroy, :href => destroy_firewall_url(@firewall.id), :method => :delete}
-    %link{ :rel => :update, :href => "#{firewall_url(@firewall_name)}/rules", :method => :post}
-  - @firewall.attributes.select{ |attr| attr != :id && attr!= :rules}.each do |attribute|
+    %link{ :rel => :destroy, :href => destroy_firewall_url(firewall.id), :method => :delete}
+    %link{ :rel => :update, :href => "#{firewall_url(firewall_name)}/rules", :method => :post}
+  - firewall.attributes.select{ |attr| attr != :id && attr!= :rules}.each do |attribute|
     - haml_tag("#{attribute}".tr('-', '_'), :<) do
       - if [:name, :description].include?(attribute)
         =cdata do
-          - haml_concat @firewall.send(attribute)
+          - haml_concat firewall.send(attribute)
       - else
-        - haml_concat @firewall.send(attribute)
+        - haml_concat firewall.send(attribute)
   %rules
-    - @firewall.rules.each do |rule|
-      %rule{:href => firewall_url(@firewall.id) + '/' + rule.id, :id => rule.id}
+    - firewall.rules.each do |rule|
+      %rule{:href => firewall_url(firewall.id) + '/' + rule.id, :id => rule.id}
         %actions
-          %link{ :rel => :destroy, :href => "#{firewall_url(@firewall.name)}/#{rule.id}", :method => :delete}
+          %link{ :rel => :destroy, :href => "#{firewall_url(firewall.name)}/#{rule.id}", :method => :delete}
         - rule.attributes.select{|attr| attr != :sources && attr != :id}.each do |rule_attrib|
           - haml_tag("#{rule_attrib}".tr('-', '_'), :<) do
             - haml_concat rule.send(rule_attrib)
