--- a/server/views/images/index.xml.haml
+++ b/server/views/images/index.xml.haml
@@ -1,5 +1,5 @@
 - unless defined?(partial)
   !!! XML
 %images
-  - @elements.each do |c|
-    = haml :'images/show', :locals => { :@image => c, :partial => true }
+  - elements.each do |c|
+    = haml :'images/show', :locals => { :image => c, :partial => true }
