--- a/server/views/instances/index.xml.haml
+++ b/server/views/instances/index.xml.haml
@@ -1,4 +1,4 @@
 !!! XML
 %instances
-  - @elements.each do |c|
-    = haml :'instances/show', :locals => { :@instance => c, :partial => true }
+  - elements.each do |c|
+    = haml :'instances/show', :locals => { :instance => c, :partial => true }
