--- a/server/views/instances/run.xml.haml
+++ b/server/views/instances/run.xml.haml
@@ -1,7 +1,7 @@
 %instance{:id => params[:id], :href=> instance_url(params[:id])}
   %public_address
-    =@output.ssh.network.ip
+    =output.ssh.network.ip
   %command
-    =@output.ssh.command
+    =output.ssh.command
   %output<
-    =@output.body
+    =output.body
