--- a/server/views/keys/index.xml.haml
+++ b/server/views/keys/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %keys
-  - @elements.each do |c|
-    = haml :'keys/show', :locals => { :@key => c, :partial => true }
+  - elements.each do |c|
+    = haml :'keys/show', :locals => { :key => c, :partial => true }
