--- a/server/views/load_balancers/index.xml.haml
+++ b/server/views/load_balancers/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %load_balancers
-  - @elements.each do |c|
-    = haml :'load_balancers/show', :locals => { :@load_balancer => c, :partial => true }
+  - elements.each do |c|
+    = haml :'load_balancers/show', :locals => { :load_balancer => c, :partial => true }
