--- a/server/views/realms/index.xml.haml
+++ b/server/views/realms/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %realms
-  - @elements.each do |c|
-    = haml :'realms/show', :locals => { :@realm => c, :partial => true }
+  - elements.each do |c|
+    = haml :'realms/show', :locals => { :realm => c, :partial => true }
