--- a/server/views/realms/show.xml.haml
+++ b/server/views/realms/show.xml.haml
@@ -1,11 +1,11 @@
 - unless defined?(partial)
   !!! XML
-%realm{:href => realm_url(@realm.id), :id => @realm.id }
+%realm{:href => realm_url(realm.id), :id => realm.id }
   %name<
-    =@realm.name
+    =realm.name
   %state<
-    =@realm.state
-  - unless @realm.limit.eql?(:unlimited)
+    =realm.state
+  - unless realm.limit.eql?(:unlimited)
     %limit<
       =cdata do
-        =@realm.limit
+        =realm.limit
