--- a/server/views/storage_snapshots/index.xml.haml
+++ b/server/views/storage_snapshots/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %storage_snapshots
-  - @elements.each do |c|
-    = haml :'storage_snapshots/show', :locals => { :@storage_snapshot => c, :partial => true }
+  - elements.each do |c|
+    = haml :'storage_snapshots/show', :locals => { :storage_snapshot => c, :partial => true }
