--- a/server/views/storage_snapshots/show.xml.haml
+++ b/server/views/storage_snapshots/show.xml.haml
@@ -1,7 +1,7 @@
 - unless defined?(partial)
   !!! XML
-%storage_snapshot{:href => storage_snapshot_url(@storage_snapshot.id), :id => @storage_snapshot.id }
-  %name=@storage_snapshot.id
+%storage_snapshot{:href => storage_snapshot_url(storage_snapshot.id), :id => storage_snapshot.id }
+  %name=storage_snapshot.id
   %created<
-    =@storage_snapshot.created
-  %storage_volume{:href => storage_volume_url(@storage_snapshot.storage_volume_id), :id => @storage_snapshot.storage_volume_id}
+    =storage_snapshot.created
+  %storage_volume{:href => storage_volume_url(storage_snapshot.storage_volume_id), :id => storage_snapshot.storage_volume_id}
