--- a/server/views/storage_volumes/show.xml.haml
+++ b/server/views/storage_volumes/show.xml.haml
@@ -1,33 +1,33 @@
 - unless defined?(partial)
   !!!XML
-%storage_volume{ :href => storage_volume_url(@storage_volume.id), :id => @storage_volume.id}
-  - if @storage_volume.created
+%storage_volume{ :href => storage_volume_url(storage_volume.id), :id => storage_volume.id}
+  - if storage_volume.created
     %created<
-      =@storage_volume.created
+      =storage_volume.created
   %capacity{ :unit => "GB" }<
-    = @storage_volume.capacity
-  - if @storage_volume.kind
+    = storage_volume.capacity
+  - if storage_volume.kind
     %kind<
-      = @storage_volume.kind
+      = storage_volume.kind
   %name<
-    = @storage_volume.name || @storage_volume.id
-  - if @storage_volume.device
+    = storage_volume.name || storage_volume.id
+  - if storage_volume.device
     %device<
-      = @storage_volume.device
-  - if @storage_volume.realm_id
-    %realm{:id => @storage_volume.realm_id, :href => realm_url(@storage_volume.realm_id)}
+      = storage_volume.device
+  - if storage_volume.realm_id
+    %realm{:id => storage_volume.realm_id, :href => realm_url(storage_volume.realm_id)}
     %realm_id<
-      = @storage_volume.realm_id
-  - if @storage_volume.state
+      = storage_volume.realm_id
+  - if storage_volume.state
     %state<
-      = @storage_volume.state
+      = storage_volume.state
 
-  - unless @storage_volume.instance_id.nil?
+  - unless storage_volume.instance_id.nil?
     %mount
-      %instance{:href => instance_url(@storage_volume.instance_id), :id => @storage_volume.instance_id}
-      - unless @storage_volume.device.nil?
-        %device{ :name => @storage_volume.device }
-  - if @storage_volume.actions
+      %instance{:href => instance_url(storage_volume.instance_id), :id => storage_volume.instance_id}
+      - unless storage_volume.device.nil?
+        %device{ :name => storage_volume.device }
+  - if storage_volume.actions
     %actions
-      - @storage_volume.actions.each do |action|
-        %link{:rel => action, :method => :post, :href => self.send("#{action}_storage_volume_url", @storage_volume.id)}
+      - storage_volume.actions.each do |action|
+        %link{:rel => action, :method => :post, :href => self.send("#{action}_storage_volume_url", storage_volume.id)}
